# simplelogin

./: Backend.cpp  CMakeLists.txt  HelperApp.cpp  HelperApp.h  README  UserSession.cpp  kwinwrapper  westonwrapper
backend/: PamBackend.cpp  PamBackend.h  PamHandle.cpp  PamHandle.h
debian/: changelog  control  copyright
debian/patches/: install-kwinwrapper,-not-westonwrapper  series
systemd/: CMakeLists.txt  simplelogin.service  simplelogin.service.in  simplelogin@.service
upstart/: simplelogin.conf  simplelogin.override
